Russian translation update to r8045
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8046 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ru/foxtrick.properties
+++ b/content/locale/ru/foxtrick.properties
@@ -1,5 +1,5 @@
 # ru-RU (Russian language file)
-# based on MASTER language file r7967
+# based on MASTER language file r8045
 # by _KOHb_ [teamId=28914]
 
 # Hints:
@@ -56,7 +56,7 @@ foxtrick.TeamPopupLinks.desc=Всплывающее меню со ссылкам
 foxtrick.StaffMarker.desc=Подсвечивать ники администраторов игры на форуме и на страницах команд.
 foxtrick.StaffMarker.manager.desc=Подсвечивать ники администраторов игры на страницах команд
 foxtrick.StaffMarker.own.desc=Собственные отметки в формате JSON (с ID пользователя в качестве ключа и стилем в качестве значения), например {"1001" : "color: red;", "1002" : "background-color: yellow;"}
-foxtrick.StaffMarker.flag.desc=Добавлять флаг к имени пользователя в окне выбора
+foxtrick.StaffMarker.HT-Youthclub.desc=Отмечать персонал HT-Youthclub
 #ForumYouthIcons
 foxtrick.ForumYouthIcons.desc=Панель ссылок на юношескую академию (также работает для почты, пресс-релизов, гостевой книги и анонсов)
 foxtrick.ForumYouthIcons.q.desc=Добавлять пропущенный значок для цитирования
@@ -85,6 +85,8 @@ foxtrick.EmbedMedia.EmbedYoutubeVideos.desc=Внедрять видео с YouTu
 foxtrick.EmbedMedia.EmbedVimeoVideos.desc=Внедрять видео с Vimeo
 foxtrick.EmbedMedia.EmbedFunnyOrDieVideos.desc=Внедрять видео с FunnyOrDie
 foxtrick.EmbedMedia.EmbedDailymotionVideos.desc=Внедрять видео с Dailymotion
+#Forum direct page links
+foxtrick.DirectPageLinks.desc=Добавлять ссылки, позволяющие перейти на соответствующую тему форума.
 #
 foxtrick.CopyPostID.desc=Создаёт ссылку для копирования идентификатора сообщения
 foxtrick.CopyPosting.desc=Значок для копирования сообщения вместе с его ссылками
@@ -226,7 +228,6 @@ foxtrick.ExtraShortcuts.FoxTrickPrefs.desc=Значок ссылки на стр
 foxtrick.ExtraShortcuts.HtRadio.desc=HtRadio
 foxtrick.ExtraShortcuts.No9.desc=No9 Radio
 foxtrick.ExtraShortcuts.Latehome.desc=Latehome Radio
-foxtrick.ExtraShortcuts.Balkaradio.desc=Balkaradio
 foxtrick.ExtraShortcuts.Downtime.desc=Downtime Radio
 #CopyMatchID
 foxtrick.CopyMatchID.desc=Копирует Id матча в буфер обмена при нажатии значка типа матча (лига/кубок/товарищеский) на странице списка матчей. Для обладателей supporter работает также и на странице 'Лицом к лицу' (ссылки 'Последние матчи' и 'История').
@@ -812,7 +813,7 @@ CopyYouth.fixturesSource=Скопировать исходный код стра
 CopyYouth.fixturesSource.copied=Исходный код страницы был скопирован в буфер обмена.
 CopyYouth.goto=Перейти к %s
 
-MatchReportFormat.matchReport=Отчёт о матче
+MatchReportFormat.MatchReport=Отчёт о матче
 MatchReportFormat.lineup=Составы команд
 MatchReportFormat.kickOff=Стартовый свисток
 MatchReportFormat.halfTime=Перерыв
@@ -1167,5 +1168,6 @@ foxtrick.prefs.AdditionalOptions=Основные параметры
 foxtrick.prefs.smallcopyicons=Копия значков в заголовке вместо отдельного места на боковой панели
 foxtrick.prefs.DisplayHTMLDebugOutput=Показывать протокол работы FoxTrick в нижней части страниц (для отладки)
 
+foxtrick.prefs.permissionsHint=Модулю %s нужно разрешение для работы. Дайте ему доступ в следующем диалоге.
 
 ###EOF
