--- a/content/locale/ru/release-notes.xml
+++ b/content/locale/ru/release-notes.xml
@@ -11,7 +11,16 @@
 <notes xmlns:xhtml="http://www.w3.org/1999/xhtml">
 	<note version="nightly" localized-version="Версия для разработчиков">
 		<item>Пожалуйста, посмотрите <xhtml:a href="http://code.google.com/p/foxtrick/source/list">историю изменений</xhtml:a> на сайте Google Code для деталей.</item>
-		<item>Вы можете отключить показ этого сообщения после каждого обновления, запретив "Показать информацию о выпуске после обновления FoxTrick" на вкладке <xhtml:a href="#tab=main">Главные</xhtml:a> настроек.</item>
+	</note>
+
+	<note version="0.8.1">
+		<item>Модуль <module>ElectionTable</module>: адаптация к новому виду таблицы голосования (convincedd, ryanli).</item>
+		<item>Модуль <module>HTThreadMarker</module>: новый вид (convincedd, ryanli).</item>
+		<item>Модуль <module>TableSort</module>: предотвращение конфликтования с собственной сортировкой HT (convincedd).</item>
+		<item>Модули <module>HTMSPrediction</module>, <module>CopyRatings</module>: адаптация к новоми виду отчёта о матче (convincedd).</item>
+		<item>Модуль <module>LineupShortcut</module>: также показывается для не-supporter-ов (ryanli).</item>
+		<item>Модуль <module>TransferSearchResultFilters</module>: исправление согласно последним изменениям (convincedd).</item>
+		<item>Модуль <module>SkillTable</module>: включение преданности и бонуса родного клуба (convincedd).</item>
 	</note>
 
 	<note version="0.8">
@@ -25,7 +34,7 @@
 		<item>Параметр для скрытия поля приглашений в левом меню в модуле <module>FixcssProblems</module> (ryanli).</item>
 		<item>Параметр для уменьшения высоты календаря в модуле <module>FixcssProblems</module> (ryanli).</item>
 		<item>Ссылка на страницу настроек приложений CHPP в модуле <module>ExtraShortcuts</module> (ljushaff).</item>
-		<item>Параметр для расцветки навыков игроков юношеской команды в модуле <module>SkillTable</module> (asdfasdfasdf@mailinator.com).</item>
+		<item>Параметр для расцветки навыков игроков юношеской команды в модуле <module>SkillTable</module> (foulpelz).</item>
 		<item>Параметр для проигрывания звука в модуле <module>LiveAlert</module> (ryanli).</item>
 		<item>Параметр для показа значков команд в модуле <module>MyMonitor</module>, и команды в нём теперь можно отсортировать (convincedd).</item>
 		<item>Параметр для вставки отладочного протокола FoxTrick в сообщение форума в модуле <module>ForumYouthIcons</module> (convincedd).</item>
