Small de update, filter and extended embedmedia
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8064 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -85,6 +85,11 @@ foxtrick.EmbedMedia.EmbedYoutubeVideos.desc=YouTube Videos einbetten
 foxtrick.EmbedMedia.EmbedVimeoVideos.desc=Vimeo Videos einbetten
 foxtrick.EmbedMedia.EmbedFunnyOrDieVideos.desc=FunnyOrDie Videos einbetten
 foxtrick.EmbedMedia.EmbedDailymotionVideos.desc=Dailymotion Videos einbetten
+foxtrick.EmbedMedia.EmbedModeOEmebed.desc=Verwende 'oEmbed' um Medien einzubetten (nur für Google Chrome) 
+foxtrick.EmbedMedia.ReplaceLinksByTitles.desc=Ersetzt den ursprünglichen Text des Links durch den Titel des Mediums. z.B: durch den Bildtitel 
+foxtrick.EmbedMedia.EmbedSoundCloud.desc=Soundcloud einbetten 
+foxtrick.EmbedMedia.EmbedFlickrImages.desc=Flickr Bilder einbetten 
+foxtrick.EmbedMedia.EmbedDeviantArtImages.desc=Deviantart Bilder einbetten 
 #Forum direct page links
 foxtrick.DirectPageLinks.desc=Fügt Links bei mehrseitigen Threads ein, welche es erlauben direkt auf eine bestimmte Seite zu springen.
 #
@@ -368,7 +373,7 @@ foxtrick.SupporterStatsEnhancements.desc=Markierung für Spieler des aktuellen T
 
 
 
-
+foxtrick.Filter.desc=Fügt oben auf der Spielerseite die Möglichkeit hinzu, die Spieler nach gewissen Kriterien zu filtern
 
 
 # -----------------------------------------------------------------------------
