foxtrick.CopyYouth.RejectedToHTY.desc
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8066 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -254,7 +254,7 @@ foxtrick.NewMail.NotifyForum.desc=Popup bei Forenantworten
 foxtrick.CopyYouth.desc=Kopierfunktionen für Jugendreports und Seitenquellen
 foxtrick.CopyYouth.TrainingReport.desc=Trainingsreport
 foxtrick.CopyYouth.ScoutComment.desc=Scoutkommentar
-
+foxtrick.CopyYouth.RejectedToHTY.desc=Scoutkommentar automatisch kopieren und HT-Youthclub öffnen wenn ein Spieler abgelehnt wird
 foxtrick.CopyYouth.PlayerSource.desc=Spielerseitenquelle
 foxtrick.CopyYouth.FixturesSource.desc=Spielplanseitenquelle
 foxtrick.PlayerBirthday.desc=Anzeige kommender und aktueller Geburtstage von Spielern in der Übersicht
