Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8068 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -85,11 +85,11 @@ foxtrick.EmbedMedia.EmbedYoutubeVideos.desc=Угради YouTube видео кл
 foxtrick.EmbedMedia.EmbedVimeoVideos.desc=Угради Vimeo видео клипове
 foxtrick.EmbedMedia.EmbedFunnyOrDieVideos.desc=Угради FunnyOrDie видео клипове
 foxtrick.EmbedMedia.EmbedDailymotionVideos.desc=Угради Dailymotion видео клипове
-foxtrick.EmbedMedia.EmbedModeOEmebed.desc=Користи 'oEmbed' за уградњу медија клипова. Ова опција је неопходна за све остале опције испод. (само за Chrome)  
-foxtrick.EmbedMedia.ReplaceLinksByTitles.desc=Замени текст линка именом медија клипа, нпр. именом слике.(само за Chrome)  
-foxtrick.EmbedMedia.EmbedSoundCloud.desc=Угради Soundcloud (само за Chrome)  
-foxtrick.EmbedMedia.EmbedFlickrImages.desc=Угради Flickr слике (само за Chrome)  
-foxtrick.EmbedMedia.EmbedDeviantArtImages.desc=Угради Deviantart слике (само за Chrome)  
+foxtrick.EmbedMedia.EmbedModeOEmebed.desc=Користи 'oEmbed' за уградњу медија клипова. (само за Chrome)  
+foxtrick.EmbedMedia.ReplaceLinksByTitles.desc=Замени текст линка именом медија клипа, нпр. именом слике. 
+foxtrick.EmbedMedia.EmbedSoundCloud.desc=Угради Soundcloud 
+foxtrick.EmbedMedia.EmbedFlickrImages.desc=Угради Flickr слике
+foxtrick.EmbedMedia.EmbedDeviantArtImages.desc=Угради Deviantart слике
 #Forum direct page links
 foxtrick.DirectPageLinks.desc=Додаје линкове за прелазак на одређену страницу у теми на Форуму.
 #
