Update of Czech language file (r8065)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8069 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/cs/foxtrick.properties
+++ b/content/locale/cs/foxtrick.properties
@@ -1,4 +1,4 @@
-# Czech language file, version for r8041
+# Czech language file, version for r8065
 # utf-8 encoded
 # By gucan (480304)
 
@@ -56,7 +56,7 @@ foxtrick.TeamPopupLinks.desc=Při najetí na odkaz na tým zobrazuje malé plovo
 foxtrick.StaffMarker.desc=Zvýrazňuje přezdívky pracovníků Hattricku na konferencích a stránkách týmů.
 foxtrick.StaffMarker.manager.desc=Zvýrazňovat přezdívky pracovníků Hattricku na stránkách týmů
 foxtrick.StaffMarker.own.desc=Vlastní označení v JSON formátu (ID jako klíč, styl jako hodnota; např. {"1001" : "color: red;", "1002" : "background-color: yellow;"})
-foxtrick.StaffMarker.flag.desc=K uživatelům v rozbalovací nabídce přidat vlajku
+foxtrick.StaffMarker.HT-Youthclub.desc=Zvýraznit pracovníky serveru HT-Youthclub
 #ForumYouthIcons
 foxtrick.ForumYouthIcons.desc=Nad oknem pro psaní příspěvků zobrazuje lištu s odkazy pro dorosteneckou akademii (funguje i v poště, v tiskových oznámeních, v návštěvní knize a v inzerátech).
 foxtrick.ForumYouthIcons.q.desc=Přidat ikonku pro vložení citace v případě, že není zobrazena
@@ -85,6 +85,11 @@ foxtrick.EmbedMedia.EmbedYoutubeVideos.desc=Vkládat videa z YouTube
 foxtrick.EmbedMedia.EmbedVimeoVideos.desc=Vkládat videa z Vimeo
 foxtrick.EmbedMedia.EmbedFunnyOrDieVideos.desc=Vkládat videa z FunnyOrDie
 foxtrick.EmbedMedia.EmbedDailymotionVideos.desc=Vkládat videa z Dailymotion
+foxtrick.EmbedMedia.EmbedModeOEmebed.desc=Pro vkládání médií používat oEmbed. (jen pro Chrome)
+foxtrick.EmbedMedia.ReplaceLinksByTitles.desc=Nahradit text odkazu štítkem s typem média, např. názvem obrázku
+foxtrick.EmbedMedia.EmbedSoundCloud.desc=Vkládat Soundcloud
+foxtrick.EmbedMedia.EmbedFlickrImages.desc=Vkládat obrázky ze serveru Flickr
+foxtrick.EmbedMedia.EmbedDeviantArtImages.desc=Vkládat obrázky ze serveru Deviantart
 #Forum direct page links
 foxtrick.DirectPageLinks.desc=Přidává odkazy, pomocí kterých lze přejít přímo na určitou stránku vlákna.
 #
@@ -154,6 +159,7 @@ foxtrick.MatchReportFormat.ShowEventIcons.desc=Přidat ikony k jednotlivým udá
 foxtrick.MatchReportFormat.SeparateOwnTeamColors.desc=Odstranit obarvení vlastního týmu
 foxtrick.ForumRedirManagerToTeam.desc=Odkazy na konferenci vedoucí na stránku manažera přesměrovává na stránku týmu.
 foxtrick.ManagerButtons.desc=Přidává nebo mění tlačítka na stránce manažera a týmu.
+foxtrick.ManagerButtons.GuestBook.desc=na stránku manažera a týmu přidává odkaz na návštěvní knihu
 foxtrick.HTThreadMarker.desc=Označuje vlákna vytvořená členy HT týmu.
 foxtrick.TeamStats.desc=Vytváří přehled o hráčích týmu.
 foxtrick.TeamStats.General.desc=Všeobecné informace (TSI/věk)
@@ -189,8 +195,8 @@ foxtrick.ExtendedPlayerDetailsWage.SeasonWage.desc=Zobrazit sezónní plat
 foxtrick.FixcssProblems.desc=Opravuje několik chyb vyskytujících se v CSS stylu Hattricku
 foxtrick.FixcssProblems.Club_Menu_Teamnames.desc=Opravit ořezávání dlouhých jmen týmů v levé nabídce
 foxtrick.FixcssProblems.Forum_FoxLink_Headers.desc=Opravit neviditelné obrázky FoxLinku v záhlaví příspěvků
+foxtrick.FixcssProblems.HideInvitation.desc=Skrývat box s pozvánkami v dolní části postranní nabídky
 foxtrick.FixcssProblems.Page_Minimum_Height.desc=Opravit šířku stránky v případě, že není zobrazena rolovací lišta
-
 foxtrick.FixcssProblems.RTL_Fixes.desc=Opravit několik chyb Hattricku vztahující se k jazykůk psaným zprava doleva
 foxtrick.FixcssProblems.ForumScrollBarFix.desc=Na konferenci přidat pevnou posuvnou lištu. Méně obtěžující, než podobné řešení Hattricku
 foxtrick.FixcssProblems.MatchReportRatingsFontFix.desc=Zvětšit velikost písma u formátování 'small font'
@@ -227,7 +233,6 @@ foxtrick.ExtraShortcuts.FoxTrickPrefs.desc=Ikona s odkazem na stránku s nastave
 foxtrick.ExtraShortcuts.HtRadio.desc=HtRadio
 foxtrick.ExtraShortcuts.No9.desc=Rádio No9
 foxtrick.ExtraShortcuts.Latehome.desc=Rádio Latehome
-foxtrick.ExtraShortcuts.Balkaradio.desc=Balkaradio
 foxtrick.ExtraShortcuts.Downtime.desc=Rádio Downtime
 #CopyMatchID
 foxtrick.CopyMatchID.desc=Po kliknutí na ikonu ligového/pohárového/přátelského utkání na stránce zápasů zkopíruje ID zápasu do schránky. U Fanoušků tato funkce funguje i na stránce předzápasové přípravy (konkrétně v záložkách 'Nedávné výsledky' a 'Vzájemné zápasy').
@@ -295,6 +300,7 @@ foxtrick.YouthSkillHideUnknown.HideUnknown.desc=Skrývat neznámé dovednosti
 foxtrick.YouthSkillHideUnknown.HideMaximalKeyWord.desc=Skrývat slovo 'max.' kvůli získání místa
 foxtrick.SkillTable.desc=Zobrazuje dovednosti hráčů ve formě tabulky.
 foxtrick.SkillTable.OtherTeams.desc=Zobrazovat i u jiných týmů
+foxtrick.SkillTable.ColouredYouth.desc=Zobrazovat dovednosti dorostenců barevně
 #HighlightCupwins
 foxtrick.HighlightCupwins.desc=Na stránce s pohárovými zápasy zvýrazňuje vítězné týmy.
 foxtrick.HighlightCupwins.HighlightCupsets.desc=Zvýrazňovat překvapivé výsledky (vítězství týmů s horším nasazením)
@@ -830,6 +836,7 @@ foxtrick.tweaks.skilltablecopied=Konferenční kód tabulky dovedností byl zkop
 foxtrick.tweaks.matchidcopied=ID zápasu bylo zkopírováno do schránky.
 foxtrick.tweaks.postidcopied=Odkaz na příspěvek [post=%s]  byl zkopírován do schránky.
 foxtrick.tweaks.postingcopied=Příspěvek %s byl zkopírován do schránky.
+foxtrick.tweaks.youthstatistics=Statistiky dorostu na ht-ys.org
 
 #matches
 foxtrick.matches.attackdefensebars=Grafy útoků a obran
@@ -1051,6 +1058,7 @@ button.import=Importovat
 button.restoreDefault=Obnovit původní nastavení
 button.deleteToken=Smazat token
 button.disableAll=Vypnout vše
+button.revokePermissions=Zrušit oprávnění
 
 status.loading=Načítání…
 status.loading.abbr=…
@@ -1118,6 +1126,7 @@ foxtrick.prefs.oauth.delete=Smazat OAuth token/klíč pro vybraný tým
 # NOTE - please preserve the braces, inner content will be converted to link
 foxtrick.prefs.oauth.delete.desc=Vztahuje se jen k tomuto prohlížeči. Pokud chceš FoxTricku definitivně zamezit v přístupu k týmu, použij {CHPP správu} na stránkách Hattricku.
 foxtrick.prefs.labelDisableAll=Vypnout všechny moduly
+foxtrick.prefs.labelRevokePermissions=Zrušit všechna doplňková oprávnění (jen pro Chrome)
 foxtrick.prefs.labelSavePrefs=Exportovat nastavení a vlastní nastavení
 foxtrick.prefs.labelSavePrefs_Prefs=Exportovat nastavení
 foxtrick.prefs.labelSavePrefs_Notes=Vlastní nastavení (poznámky, šablony, vlastní odkazy a přestupové filtry)
@@ -1161,10 +1170,12 @@ prefs.view.by.page=Zobrazit podle poslední HT stránky
 delete_foxtrick_branches_ask=Opravdu chceš obnovit původní nastavení FoxTricku?
 delete_oauth_ask=Smazat OAuth token/klíč pro tým s ID %s?
 disable_all_foxtrick_modules_ask=Opravdu chceš vypnout všechny moduly Foxtricku?
+revoke_permissions_ask=Opravdu chceš zrušit všechna doplňková oprávnění?
 
 foxtrick.prefs.AdditionalOptions=Další možnosti
 foxtrick.prefs.smallcopyicons=Místo odděleného postranního panelu zobrazovat ikonky v záhlaví
 foxtrick.prefs.DisplayHTMLDebugOutput=V patičce stránek Hattricku (pro vývojáře) zobrazovat log FoxTricku (pro debugging)
 
+foxtrick.prefs.permissionsHint=%s pro svou práci požaduje určitá oprávnění, která můžeš schválit v následujícím dialogu.
 
 ###EOF
