Korean Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8083 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ko/foxtrick.properties
+++ b/content/locale/ko/foxtrick.properties
@@ -821,10 +821,10 @@ CopyYouth.goto=%s으로 가기
 
 MatchReportFormat.MatchReport=경기 보고서
 MatchReportFormat.lineup=라인업
-MatchReportFormat.kickOff=킥 오프
+MatchReportFormat.kickOff=경기 시작
 MatchReportFormat.halfTime=하프 타임
-MatchReportFormat.fullTime=풀타임
-MatchReportFormat.extraTime=추가 시간
+MatchReportFormat.fullTime=경기 종료
+MatchReportFormat.extraTime=연장전
 MatchReportFormat.penaltyShootOut=승부차기
 MatchReportFormat.result=결과
 
@@ -1027,11 +1027,11 @@ Links.feeds=링크 리스트 피드(줄 바꿈에 의해 구분)
 
 #actions
 Copy=복사
-View=뷰
-Switch_view=뷰 전환
+View=보기
+Switch_view=보기 전환
 Detach=떼기
 AddHomegrown=모 클럽 선수 추가
-showTimeInClub=클럽 시가 나타내기
+showTimeInClub=클럽에 소속된 시간 나타내기
 Filter=필터
 sort.up=위
 sort.down=아래
@@ -1140,7 +1140,7 @@ foxtrick.prefs.stagepref=Stage 서버 비활성화
 foxtrick.prefs.disableTemporaryLabel=임시 비활성화
 foxtrick.prefs.saved=환경설정 저장!
 foxtrick.prefs.loaded=환경설정 불러오기!
-foxtrick.prefs.dismissNotice=(click to dismiss this notice)
+foxtrick.prefs.dismissNotice=(현재 공지사항을 없애려면 클릭)
 
 pref.xmlLoad=Hattrick으로부터 추가 정보를 위한 XML 불러오기
 
