Htlang.xml Fixed (mostly) minor errors in <levels>
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8086 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ca/htlang.xml
+++ b/content/locale/ca/htlang.xml
@@ -61,7 +61,7 @@
 		<level text="brillant" value="11" />
 		<level text="destacat" value="10" />
 		<level text="formidable" value="9" />
-		<level text="excel•lent" value="8" />
+		<level text="excel·lent" value="8" />
 		<level text="notable" value="7" />
 		<level text="acceptable" value="6" />
 		<level text="insuficient" value="5" />
