--- a/content/locale/vi/htlang.xml
+++ b/content/locale/vi/htlang.xml
@@ -60,7 +60,7 @@
 		<level text="tuyệt vời" value="12" />
 		<level text="phi thường" value="11" />
 		<level text="kỳ diệu" value="10" />
-		<level text="vượt trộ" value="9" />
+		<level text="vượt trội" value="9" />
 		<level text="xuất sắc" value="8" />
 		<level text="giỏi" value="7" />
 		<level text="khá" value="6" />
